# spring-cli-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml  test.yml
src/: args.rs  main.rs  request.rs  state.rs  steps.rs  user_innput.rs
