[package]
name = "spring-boot-cli"
version = "0.0.1"
edition = "2021"
authors = ["Kristoffer Larsen Hopland"]
rust-version = "1.74.0"

readme = "README.md"
description = "A simple rust cli app to get spring starters"
repository = "https://github.com/khopland/spring-cli-rust.git"
keywords = ["cli", "spring"]
categories = ["command-line-utilities", "development-tools::profiling", "visualization"]
license = "Apache-2.0"
exclude = [ "/*.zip"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["blocking","json"] }
serde_json = "1.0"
inquire = "0.7.5"
anyhow = "1.0.86"
resolve-path = "0.1.0"
clap = { version = "4.5.7", features = ["derive"] }


[dev-dependencies]
httpmock = "0.7.0"