[package]
name = "spring-boot-cli"
version = "0.2.0"
edition = "2021"
authors = ["Kristoffer Larsen Hopland"]
rust-version = "1.74.0"

readme = "README.md"
description = "A simple rust cli app to get spring starters"
repository = "https://github.com/khopland/spring-cli-rust.git"
keywords = ["cli", "spring"]
categories = [
    "command-line-utilities",
    "development-tools"
]
license = "Apache-2.0"
exclude = ["/*.zip"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inquire = "0.7.5"
anyhow = "1"
resolve-path = "0.1.0"
clap = { version = "4", features = ["derive"] }
zip-extract = "0.2.2"
zip = { version = "2", default-features = false }
ureq = { version = "3", features = ["json"] }
url = "2"
[dev-dependencies]
httpmock = "0.7.0"
