[package]
name = "spring-boot-cli"
version = "0.2.3"
edition = "2021"
authors = ["Kristoffer Larsen Hopland"]
rust-version = " 1.88.0"

readme = "README.md"
description = "A simple rust cli app to get spring starters"
repository = "https://github.com/khopland/spring-cli-rust.git"
keywords = ["cli", "spring"]
categories = [
    "command-line-utilities",
    "development-tools"
]
license = "Apache-2.0"
exclude = ["/*.zip"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
inquire = "0.9.1"
anyhow = "1"
resolve-path = "0.1.0"
clap = { version = "4", features = ["derive"] }
zip = { version = "7"}
ureq = { version = "3.1", features = ["json"] }
url = "2.5"
[dev-dependencies]
httpmock = "0.8"
